--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                     </div>
                     <div class="row">
                       <div class="col">
-                        <h6>Connect With Me</h6>
+                        <h6>Connect</h6>
                             <!-- buttons -->
                             <div class="buttons">
                                     <!-- buttons-inner -->
