--- a/assets/html/contact-me.html
+++ b/assets/html/contact-me.html
@@ -93,7 +93,7 @@
                                       <h3>Summary</h3>
                                       <br>
                                       <p>I am a certified Full-Stack web developer with a background in sales and analytics. I currently work as a Customer Success Manager for <a href="https://lexmachina.com/">Lex Machina</a>.</p>
-                                      <p>I am experienced in partnering with Fortune 500 companies, such as Allstate, Apple, Cisco, eBay, Facebook, Ford, General Motors, HP, Microsoft, Motorola, Nike, PayPal, Sony, Uber, and Yahoo helping them to increase productivity through the adoption of information, technology, and research solutions. I have a proven ability at maximizing long-term revenue opportunities by becoming a trusted advisor to clients and strengthening their brand loyalty.</p>
+                                      <p>I am experienced in partnering with Fortune 500 companies, such as Allstate, Apple, eBay, Facebook, General Motors, HP, Microsoft, PayPal, Sony, Uber, and Yahoo helping them to increase productivity through the adoption of information, technology, and research solutions. I have a proven ability at maximizing long-term revenue opportunities by becoming a trusted advisor to clients and strengthening their brand loyalty.</p>
                                       <br>
                                       <h3>Experience</h3>
                                       <br>
