--- a/index.html
+++ b/index.html
@@ -67,8 +67,13 @@
                                 </div>
                                 <div class="card-body">
                                         
-                                        <img src="https://pa1.narvii.com/5737/f33f8082d52b5f7951e04c10ce7c7acb59f57ab2_hq.gif" class="card-img" style="width:100%" alt="pokemon">
+                                        <img src="http://66.media.tumblr.com/2f5305937c58a65502917639a01732d6/tumblr_n50m76NQJ21ts7zvxo1_500.gif" class="card-img" id="featured-img" alt="pokemon">
                                         <!-- <img src="https://media.giphy.com/media/2ukGH9ROKlXuo/giphy.gif" class="card-img" alt="pokemon"> -->
+                                        <!-- https://pa1.narvii.com/5737/f33f8082d52b5f7951e04c10ce7c7acb59f57ab2_hq.gif -->
+                                        <!-- https://i.pinimg.com/originals/9f/1d/58/9f1d582d5a8045fec25f03530d73dd24.gif -->
+                                        
+                                        <br>
+
                                         <h5 class="card-title">Pokemon Battle Simulator</h5>
                                     <p class="card-text">Choose your Pokemon and battle your way to victory. You must defeat all of the challangers to win. </p>
                                     <a href="https://aeldenburg001.github.io/Pokemon-Battle-Simulator/index.html" class="btn btn-outline-dark">Play Now</a>
