resized design images

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                     <div class="col-sm">
                         <div class="card">
                             <div class="card-body">
-                                <img src="assets/images/logo6.png" class="card-img" style="width:100%" alt="logos">
+                                <img src="assets/images/logo6.png" class="icon" alt="logos">
 
                             </div>
                           </div>
@@ -216,7 +216,7 @@
                     <div class="col-sm">
                         <div class="card">
                             <div class="card-body">
-                                <img src="assets/images/logo.png" class="card-img" style="width:100%" alt="logos">
+                                <img src="assets/images/logo.png" class="icon" alt="logos">
 
                             </div>
                           </div>
@@ -224,7 +224,7 @@
                     <div class="col-sm">
                         <div class="card">
                             <div class="card-body">
-                                <img src="assets/images/logo2.png" class="card-img" style="width:100%" alt="logos">
+                                <img src="assets/images/logo2.png" class="icon" alt="logos">
 
                             </div>
                           </div>
@@ -237,7 +237,7 @@
                     <div class="col-sm">
                         <div class="card">
                             <div class="card-body">
-                                <img src="assets/images/logo8.png" class="card-img" style="width:100%" alt="logos">
+                                <img src="assets/images/logo8.png" class="icon" alt="logos">
 
                             </div>
                           </div>
@@ -245,7 +245,7 @@
                     <div class="col-sm">
                         <div class="card">
                             <div class="card-body">
-                                <img src="assets/images/logo7.png" class="card-img" style="width:100%" alt="logos">
+                                <img src="assets/images/logo7.png" class="icon" alt="logos">
 
                             </div>
                           </div>
@@ -253,7 +253,7 @@
                     <div class="col-sm">
                         <div class="card">
                             <div class="card-body">
-                                                      <img src="assets/images/logo4.png" class="card-img" style="width:100%" alt="logos">
+                                                      <img src="assets/images/logo4.png" class="icon" alt="logos">
 
                             </div>
                           </div>
