--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 <body>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                
+          <a class="navbar-brand" href="#">
+            <img src="assets/images/new-logo.png" width="50" height="40" class="d-inline-block align-top" alt=""></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -37,7 +38,7 @@
 
               <br>
 
-              <div class="jumbotron jumbotron-fluid">
+              <div class="jumbotron jumbotron-fluid" id="jumbo">
                   <div class="container">
                     <h1 class="display-4">
                         
@@ -208,7 +209,7 @@
                     <div class="col-sm">
                         <div class="card">
                             <div class="card-body">
-                                <img src="assets/images/logo6.png" class="icon" alt="logos">
+                                <img src="assets/images/logo6.png" class="design" alt="logos">
 
                             </div>
                           </div>
@@ -216,7 +217,7 @@
                     <div class="col-sm">
                         <div class="card">
                             <div class="card-body">
-                                <img src="assets/images/logo.png" class="icon" alt="logos">
+                                <img src="assets/images/logo.png" class="design" alt="logos">
 
                             </div>
                           </div>
@@ -224,20 +225,18 @@
                     <div class="col-sm">
                         <div class="card">
                             <div class="card-body">
-                                <img src="assets/images/logo2.png" class="icon" alt="logos">
+                                <img src="assets/images/logo2.png" class="design" alt="logos">
 
                             </div>
                           </div>
                     </div>
                   </div>
 
-                  <br>
-
                   <div class="row">
                     <div class="col-sm">
                         <div class="card">
                             <div class="card-body">
-                                <img src="assets/images/logo8.png" class="icon" alt="logos">
+                                <img src="assets/images/logo8.png" class="design" alt="logos">
 
                             </div>
                           </div>
@@ -245,7 +244,7 @@
                     <div class="col-sm">
                         <div class="card">
                             <div class="card-body">
-                                <img src="assets/images/logo7.png" class="icon" alt="logos">
+                                <img src="assets/images/logo7.png" class="design" alt="logos">
 
                             </div>
                           </div>
@@ -253,7 +252,7 @@
                     <div class="col-sm">
                         <div class="card">
                             <div class="card-body">
-                                                      <img src="assets/images/logo4.png" class="icon" alt="logos">
+                                                      <img src="assets/images/logo4.png" class="design" alt="logos">
 
                             </div>
                           </div>
