--- a/assets/html/portfolio.html
+++ b/assets/html/portfolio.html
@@ -38,7 +38,7 @@
               <br>
 
               <!-- main-content -->
-		<div class="portfolio-content">
+		<div class="portfolio-content" id="port-cont">
 
                 <!--Portfolio with links to my projects--> 
                 <div class="container">
