--- a/assets/html/contact-me.html
+++ b/assets/html/contact-me.html
@@ -45,7 +45,7 @@
                           <div class="col-sm-4">
                           <div class="card" id="my-info">
                               <div class="card-body">
-                                  <img src="../images/profile.png" class="card-img-top" style="width:100%" alt="profile">
+                                  <img src="../images/profile.png" class="card-img-top" alt="profile">
                             <br><br>
 
                                     <h5>Name:</h5>
