--- a/assets/html/contact-me.html
+++ b/assets/html/contact-me.html
@@ -37,7 +37,7 @@
 
               <br>
 
-        <div class="container" id="resume">
+        <div class="container">
                 <div class="row">
                   <!--1 of 2-->
                   <div class="col">
@@ -70,7 +70,7 @@
                               </div>
                           </div>
                           <div class="col-sm-8">
-                          <div class="card">
+                          <div class="card" id="resume">
                               <div class="card-body">
                                   <h3>Summary</h3>
                                   <br>
