minor bootstrap grid tweaks to prevent stacking

--- a/assets/html/contact-me.html
+++ b/assets/html/contact-me.html
@@ -75,7 +75,7 @@
                               <div class="card-body">
                                   <h3>Summary</h3>
                                   <br>
-                                  <p>I'm a full-stack web developer with a background in sales and analytics. I currently work as a Customer Success Manager for <a href="https://lexmachina.com/">Lex Machina</a>.</p>
+                                  <p>I'm a full-stack web developer with a background in sales and analytics.</p>
                                   <p>I am experienced in partnering with Fortune 500 companies such as; Allstate, Apple, eBay, Facebook, General Motors, HP, Microsoft, PayPal, Sony, and Uber, helping them to increase productivity through the adoption of information, technology, and research solutions. I have a proven ability at maximizing long-term revenue opportunities by becoming a trusted advisor to clients and strengthening their brand loyalty.</p>
                                   <br>
                                   <h3>Experience</h3>
@@ -162,7 +162,8 @@
 
                   
                 </div>
-              </div>  
+              </div>
+
               <footer>
                 &copy Andrew Eldenburg, 2019
               </footer> 
