--- a/assets/html/portfolio.html
+++ b/assets/html/portfolio.html
@@ -41,7 +41,7 @@
 		<div class="portfolio-content" id="port-cont">
 
                 <!--Portfolio with links to my projects--> 
-                <div class="container">
+                <div class="container-fixed">
                         <div class="row">
                                   <div class="col-md-12">
                                     <div class="card-body">
