--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!-- About Me section -->
         <div class="card" id="jumbo">
                 <div class="card-body">
-                        <div class="container">
+                        <div class="container-fixed">
                                 <div class="row">
                                   <div class="col-sm">
                                       <!-- Profile Pic -->
@@ -72,9 +72,9 @@
                   <br>
 
                   <!-- Featured content section -->
-                  <div class="container" id="feat-cont">
+                  <div class="container-fixed" id="feat-cont">
                         <div class="row">
-                          <div class="col-sm-6" id="featured">
+                          <div class="col-sm" id="featured">
 
                             <div class="card">
                                 <div class="card-header">
@@ -94,7 +94,7 @@
                             
                           </div>
                           <!-- Featured content goes here -->
-                          <div class="col-sm-6" id="featured">
+                          <div class="col-sm" id="featured">
                               
                                   <div class="card">
                                       <div class="card-header">
@@ -169,7 +169,7 @@
                         <!-- Design section -->
                         <h3>Designs</h3>
                         <br>
-                        <div class="container" id="des-cont">
+                        <div class="container-fixed" id="des-cont">
                             <div class="row">
                                 <!-- Col 1 of 3 -->
                                 <div class="col-sm">
