--- a/assets/html/contact-me.html
+++ b/assets/html/contact-me.html
@@ -43,8 +43,8 @@
                   <div class="col">
                       <div class="row">
                           <div class="col-sm-4">
-                          <div class="card">
-                              <div class="card-body" id="my-info">
+                          <div class="card" id="my-info">
+                              <div class="card-body">
                                   <img src="../images/profile.png" class="card-img-top" id="contact-me-pic" alt="profile">
                             <br><br>
 
