--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
                   <br>
 
                   <!-- Featured content section -->
-                  <div class="container-fixed" id="feat-cont">
+                  <div class="container" id="feat-cont">
                         <div class="row">
-                          <div class="col-sm" id="featured">
+                          <div class="col-md" id="featured">
 
                             <div class="card">
                                 <div class="card-header">
@@ -94,7 +94,7 @@
                             
                           </div>
                           <!-- Featured content goes here -->
-                          <div class="col-sm" id="featured">
+                          <div class="col-md" id="featured">
                               
                                   <div class="card">
                                       <div class="card-header">
