--- a/assets/html/portfolio.html
+++ b/assets/html/portfolio.html
@@ -187,8 +187,8 @@
                                                                           <a href="https://aeldenburg001.github.io/note-app/" target="_blank"><img class="port-img" src="../images/notes3.jpg" title="note app" alt="note app"></a>
                                                                           </div>
                                                                           <div class="col-sm-4">
-                                                                              <h5><!----></h5>
-                                                                              <a href="" target="_blank"><img class="port-img" src="" title="" alt=""></a>
+                                                                              <h5>Drum Kit App</h5>
+                                                                              <a href="https://aeldenburg001.github.io/Drum-Kit/" target="_blank"><img class="port-img" src="../images/drums.jpg" title="drum kit" alt="drum kit"></a>
                                                                               </div>
                                                               </div>
     
