--- a/assets/html/portfolio.html
+++ b/assets/html/portfolio.html
@@ -195,7 +195,7 @@
                                                               <div class="row">
                                                                 <div class="col-sm-4">
                                                                 <h5>Sound Box</h5>
-                                                                <a href="https://aeldenburg001.github.io/Sound-Box/." target="_blank"><img class="port-img" src="https://www.pexels.com/photo/macbook-pro-beside-black-headphones-on-gray-table-159376/" title="sound box" alt="sound box"></a>
+                                                                <a href="https://aeldenburg001.github.io/Sound-Box/" target="_blank"><img class="port-img" src="https://images.pexels.com/photos/164727/pexels-photo-164727.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" title="sound box" alt="sound box"></a>
                                                                 </div>
                                                                   <div class="col-sm-4">
                                                                       <h5><!----></h5>
