updated layout and animations

--- a/assets/html/portfolio.html
+++ b/assets/html/portfolio.html
@@ -30,9 +30,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                   <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="../../index.html" target="_blank">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link active" href="../../index.html">Home <span class="sr-only">(current)</span></a>
                     <a class="nav-item nav-link" href="../html/portfolio.html">Portfolio</a>
-                    <a class="nav-item nav-link" href="../html/contact-me.html" target="_blank">Contact</a>
+                    <a class="nav-item nav-link" href="../html/contact-me.html">Contact</a>
                     
                   </div>
                 </div>
